Round the scroll offset synced back to main instead of flooring.

When scrolling up, flooring the scroll delta sent back to main can result
in main thinking that we have scrolled up by a pixel while cc still positions
layers as if we are at the old scroll position. To be technically correct
according to the frame that will be produced, we would need to round according
to the current scroll snap size but this isn ot easily known at the time of
rounding so we use the nearest integer since this is the common case.

BUG=663291
TEST=LayerTreeHostImplTest.SyncSubpixelScrollDelta
CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_trusty_blink_rel

Review-Url: https://codereview.chromium.org/2511473003
Cr-Commit-Position: refs/heads/master@{#434022}

Former-commit-id: 75a7e4cb1ec29ded2e52539259233356caa883c8